# docs/swagger.json
@@ -46,6 +46,11 @@
         },
         "/counter/{id}": {
             "get": {
+                "security": [
+                    {
+                        "OAuth2AccessCode": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -241,6 +246,7 @@
     },
     "securityDefinitions": {
         "OAuth2AccessCode": {
+            "description": "OAuth protections",
             "type": "oauth2",
             "flow": "accessCode",
             "authorizationUrl": "https://gokube.eu.auth0.com/authorize",
